Rotation refactor redux
Simplified axis-angle to record
Mutable rotation is now separate implementation
Selection of algorithm moved to mutable class
Reintroduced toAxisAngle() to rotation interface
Removed pointless isMutable() from Transform
TODO - still need better way to incorporate Cosine function